--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hns-logger-plugin": "^1.0.0",
     "lodash": "=4.17.11",
     "moment": "^2.29.1",
+    "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "scryptlib": "=0.2.27",
